# AutoGLM-GUI

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  pyproject.toml
.github/workflows/: build.yml  claude.yml  docker-e2e.yml  docker-publish.yml  docker-test.yml  integration-tests.yml  pr-lint.yml  release.yml
AutoGLM_GUI/: __init__.py  __main__.py  config_manager.py  device_manager.py  logger.py  metrics.py  phone_agent_manager.py  phone_agent_patches.py  platform_utils.py  prompts.py  schemas.py  scrcpy_stream.py  server.py  socketio_server.py  state.py  types.py  version.py
AutoGLM_GUI/adb_plus/: qr_pair.py  serial.py
AutoGLM_GUI/agents/: factory.py  mai_adapter.py  protocols.py  stream_runner.py
AutoGLM_GUI/agents/glm/: agent.py  parser.py
AutoGLM_GUI/api/: __init__.py  agents.py  control.py  devices.py  dual_model.py  layered_agent.py  mcp.py  media.py  metrics.py  version.py  workflows.py
AutoGLM_GUI/dual_model/: decision_model.py
AutoGLM_GUI/mai_ui_adapter/: agent_wrapper.py
adb_plus/: __init__.py  screenshot.py
docs/: docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: architecture.md  changelog.md  configuration.md  deployment.md  development.md  faq.md  installation.md  intro.md  layered_agent_analysis.md  license.md  quick-start.md  shortcuts.md  upgrade.md  user-guide.md
docs/docs/deployment/: docker.md  gh-pages.md  vercel.md
docs/docs/features/: chat-tasks.md  device-connection.md  device-management.md  import-export.md  integrations-models.md  logging-auditing.md  manual-control.md  permissions-roles.md  workflows.md
electron/: electron-builder.yml  main.js  package-lock.json  package.json  preload.js  verify-deps.js
frontend/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  vite.config.js
frontend/src/: api.ts  main.tsx  routeTree.gen.ts
phone_agent/config/: prompts_zh.py
scripts/: agents_mvp.py  autoglm.spec  build_electron.py  pyi_rth_utf8.py  release.py
tests/: test_metrics.py  test_serial_extraction.py
tests/integration/: state_machine.py  test_docker_e2e.py  test_runner.py
(+25 files in other folders)
